20131007 data/Makefile.am: fix desktop integration rules to cope with VPATH
         builds (Sergio).
20131013 configure.ac,Makefile.am,compat/{Makefile.am,amiga/Makefile.am,
         linux/Makefile.am,morphos/Makefile.am,unix/Makefile.am,wii/Makefile.am,
         win32/Makefile.am}: use 'subdir-objects' option as advised by automake
         1.14 to place object files in subdirectories (patch #317) (Sergio).
20131013 configure.ac: replace obsolete ac_cv_prog_gcc with ac_cv_c_compiler_gnu
         (Sergio).
20131016 debugger/{command.c,commandl.l}: add I and R setting and getting to the
         debugger (patch #319) (Sergio).
20131209 man/fuse.1: document more movie options (Sergio).
20131215 keyboard.c,machines/specplus3.[ch],
         peripherals/disk/{beta.[ch],disciple.[ch],opus.[ch],plusd.[ch]}:
         remove clang tautological-constant-out-of-range-compare warnings by
         moving sentinels into enums and not assigning non-enum values to enum
         variables (Fred).
20131215 compat/{amiga,linux,morphos,unix,wii,win32}: add Makefile.in and
         Makefile to the ignore property (Fred).
20140113 man/fuse.1,menu.[ch],menu_data.dat,rzx.[ch],ui.c: allow to continue
         recordings if there is a final snapshot in the RZX file and allow to
         finalise recordings (part of bug #305) (Sergio).
20140123 rzx.c: reset the autosave frame count on rollback to fix the prune
         function. Fix some warnings about unused parameters (Sergio).
20140123 peripherals/disk/disk.c: fix loading of EDSK files with Sector Offset
         block (fixes bug #307) (Sergio).
20140210 data/fuse.desktop.in: Remove GNOME category as Fuse is not based on
         GNOME libraries (Sergio).
20140217 ui/widget/{filesel.c,roms.c},ui/win32/win32ui.c: fix possible leaks and
         null pointer dereferences (thanks, cppcheck) (Sergio).
20140303 memory.c: Timex EXROM and Dock text was truncated in the debugger UI
         (thanks, Andrew Owen) (Fred).